--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "framer-motion": "^11.18.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.394.0",
+    "pako": "^2.1.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
@@ -58,6 +59,7 @@
     "react-router-dom": "^6.23.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "tar": "^7.4.3",
     "vaul": "^0.9.1",
     "zod": "^3.23.8"
   },
