--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@types/node": "^20.14.2",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/tar": "^6.1.13",
     "@vitejs/plugin-react-swc": "3.5.0",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
